--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.4
+bcrypt==4.0.0
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2020.12.5
@@ -9,6 +10,7 @@ cryptography==36.0.1
 distlib==0.3.2
 filelock==3.0.12
 Flask==1.1.2
+Flask-Bcrypt==1.0.1
 Flask-Login==0.5.0
 Flask-MySQL==1.5.2
 Flask-SQLAlchemy==2.5.1
