--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.8.1
 appdirs==1.4.4
 bcrypt==4.0.0
 beautifulsoup4==4.9.3
@@ -12,13 +13,17 @@ filelock==3.0.12
 Flask==1.1.2
 Flask-Bcrypt==1.0.1
 Flask-Login==0.5.0
+Flask-Migrate==3.1.0
 Flask-MySQL==1.5.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==2.10
+importlib-metadata==4.12.0
+importlib-resources==5.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+Mako==1.2.2
 MarkupSafe==1.1.1
 mysql-connector-python==8.0.28
 numpy==1.21.3
@@ -32,3 +37,4 @@ SQLAlchemy==1.4.31
 urllib3==1.26.3
 virtualenv==20.4.7
 Werkzeug==1.0.1
+zipp==3.8.1
