--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ importlib-metadata==4.12.0
 importlib-resources==5.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jwt==1.3.1
 Mako==1.2.2
 MarkupSafe==1.1.1
 mysql-connector-python==8.0.28
