--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,32 @@
-alembic==1.8.1
-appdirs==1.4.4
-bcrypt==4.0.0
-beautifulsoup4==4.9.3
-bs4==0.0.1
-certifi==2020.12.5
-cffi==1.15.0
-chardet==4.0.0
+alembic==1.5.5
+Babel==2.9.1
+bcrypt==3.1.7
+Beaker==1.10.0
+cffi==1.15.1
 click==7.1.2
-cryptography==36.0.1
-distlib==0.3.2
-filelock==3.0.12
+coverage==5.5
+cryptography==3.4.6
 Flask==1.1.2
-Flask-Bcrypt==1.0.1
-Flask-Login==0.5.0
+Flask-Bcrypt==0.7.1
 Flask-Migrate==3.1.0
-Flask-MySQL==1.5.2
 Flask-SQLAlchemy==2.5.1
-greenlet==1.1.2
-gunicorn==20.1.0
-idna==2.10
-importlib-metadata==4.12.0
-importlib-resources==5.9.0
+Flask-Testing==0.8.1
+gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.11.2
-jwt==1.3.1
-Mako==1.2.2
+Jinja2==2.11.3
+Mako==1.1.6
 MarkupSafe==1.1.1
-mysql-connector-python==8.0.28
-numpy==1.21.3
-protobuf==3.19.4
-pycparser==2.21
-PyMySQL==1.0.2
-requests==2.25.1
-six==1.16.0
-soupsieve==2.1
-SQLAlchemy==1.4.31
-urllib3==1.26.3
-virtualenv==20.4.7
+Paste==3.5.0
+ply==3.11
+psycopg2==2.8.6
+pycparser==2.20
+pycryptodome==3.15.0
+PyJWT==2.4.0
+pyOpenSSL==20.0.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2021.1
+six==1.15.0
+SQLAlchemy==1.3.24
+Tempita==0.5.2
 Werkzeug==1.0.1
-zipp==3.8.1
